# React-File-Collector

./: .env  .gitignore  LICENSE  README.md  eslint.config.js  eslint.config.ts  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: build-windows.yml
scripts/: local-build.js
src/: main.tsx  routeTree.gen.ts  vite-env.d.ts
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: ContentComposer.tsx  ContextManager.tsx  FileIcon.tsx  FileManager.tsx  FileSearch.tsx  FileTextRenderer.tsx  FileViewer.tsx  GitDiffManager.tsx  GitIgnoreManager.tsx  LoadingScreen.tsx  MultiFileSearch.tsx  PathDisplay.tsx  SelectedFileEntry.tsx  SelectedFileList.tsx  SystemPromptManager.tsx  TitleBar.tsx  UpdateManager.tsx  UpdateNotifier.tsx  VirtualizedFileTree.tsx
src/helpers/: EncodingManager.ts  FileGroupManager.tsx  FileSystemManager.ts  GitIgnoreParser.ts  GitService.ts  SessionManager.ts  fileTypeManager.ts
src/hooks/: useUpdateCheck.ts  useUpdater.tsx
src/layout/: NavMenu.tsx  ThemeToggle.tsx
src/models/: FileInfo.ts  GitHubRelease.ts  GitIgnoreItem.ts  GitModels.ts  ProcessedPattern.ts  SystemPromptItem.ts  tree.ts
src/routes/: __root.tsx  git-diff.tsx  index.tsx  settings.tsx
src/workers/: fileProcessor.worker.ts  fileTree.worker.ts  ignore.worker.ts  syntaxHighlighter.worker.ts
